<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="35dp"
        android:text="@string/name"
        android:textColor="@color/blackTextColor"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/business"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:text="@string/ticketType"
        android:textColor="@color/blueTextColor"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        />

    <TextView
        android:id="@+id/departure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/Departure"
        android:textColor="@color/grayTextColor"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/business" />

    <TextView
        android:id="@+id/arrival"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="20dp"
        android:text="@string/Arrival"
        android:textColor="@color/grayTextColor"
        android:textSize="20sp"
        app:layout_constraintLeft_toRightOf="@+id/departure"
        app:layout_constraintTop_toBottomOf="@+id/business" />

    <TextView
        android:id="@+id/YYZ"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/depVal"
        android:textColor="@color/blackTextColor"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/departure"

         />

    <TextView
        android:id="@+id/LHR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="20dp"
        android:text="@string/ArrVal"
        android:textColor="@color/blackTextColor"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/YYZ"
        app:layout_constraintTop_toBottomOf="@+id/arrival" />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="30sp"
        android:src="@drawable/airplanes"
        app:layout_constraintLeft_toRightOf="@+id/YYZ"
        app:layout_constraintRight_toLeftOf="@id/LHR"
        app:layout_constraintTop_toBottomOf="@+id/arrival" />

    <TextView
        android:id="@+id/Toronto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="20dp"
        android:text="@string/city1"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/YYZ" />

    <TextView
        android:id="@+id/London"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="20dp"
        android:text="@string/city2"
        android:textSize="15sp"
        app:layout_constraintLeft_toRightOf="@+id/YYZ"
        app:layout_constraintTop_toBottomOf="@+id/LHR" />

    <TextView
        android:id="@+id/torontoTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10sp"
        android:text="@string/time1"
        android:textColor="@color/blackTextColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Toronto" />

    <TextView
        android:id="@+id/londonTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/time2"
        android:textColor="@color/blackTextColor"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/London"
        app:layout_constraintTop_toBottomOf="@+id/London" />


    <!-- Gray constraint layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/darkLayout"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/background_color2"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/yellowLayout">

        <TextView
            android:id="@+id/bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:text="@string/Bt"
            android:textColor="@color/grayTextColor"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Remaining"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:text="@string/R"
            android:textColor="@color/grayTextColor"
            android:textSize="20sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/time2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="5dp"
            android:text="@string/time"
            android:textColor="@color/background_color1"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt" />

        <TextView
            android:id="@+id/flyTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="65dp"
            android:text="@string/rt"
            android:textColor="@color/background_color1"
            android:textSize="25sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Remaining" />


    </androidx.constraintlayout.widget.ConstraintLayout>


    <!-- yellow layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/yellowLayout"
        android:layout_width="match_parent"
        android:layout_height="130dp"
        android:background="@color/background_color1"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/barcode">

        <TextView
            android:id="@+id/flight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60sp"
            android:layout_marginTop="40sp"
            android:text="@string/flight"
            android:textSize="15sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <TextView
            android:id="@+id/gate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/Gate"
            android:textSize="15dp"
            app:layout_constraintLeft_toRightOf="@id/flight"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/group"
            android:textSize="15dp"
            app:layout_constraintLeft_toRightOf="@id/gate"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/seat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:text="@string/seat"
            android:textSize="15sp"
            app:layout_constraintLeft_toRightOf="@id/group"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/val1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/val1"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/flight" />

        <TextView
            android:id="@+id/val2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="10dp"
            android:text="@string/val2"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/val1"
            app:layout_constraintTop_toBottomOf="@+id/gate" />

        <TextView
            android:id="@+id/val3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/val3"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/val2"
            app:layout_constraintTop_toBottomOf="@+id/group" />

        <TextView
            android:id="@+id/val4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:layout_marginTop="10dp"
            android:text="@string/val4"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintLeft_toRightOf="@id/val3"
            app:layout_constraintTop_toBottomOf="@+id/seat" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/barcode"
        android:layout_width="180dp"
        android:layout_height="100dp"
        android:src="@drawable/barcode"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="80dp"
        android:layout_height="50sp"
        android:text="@string/airLinesName"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/barcode"
        app:layout_constraintRight_toLeftOf="@id/barcode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/barcode" />


</androidx.constraintlayout.widget.ConstraintLayout>
